feat(pet): each character idles in its own way
What a pet does with nothing to do, sitting or wandering, was the same
for every pet and fixed in code: look at a player within five blocks,
look at an animal, stroll, or stand about, weighted 2, 2, 2 and 1. It
now comes from the personality's new `idle` habits: how often each is
picked, how near someone has to be to be looked at, and how long each
lasts. Every value is optional and defaults to what pets did before.

Each character leans as the series draws it: Momonga looks at you the
most, from farthest and for longest, waiting to be praised; Chiikawa
glances over often and quickly away; Usagi is forever off somewhere;
Kurimanju and Furuhonya mostly sit; Rakko watches what moves around it
more than people.

The pick is WeightedChoice, which shuffles by weight as vanilla's RunOne
does but asks for the weights at each pick, so a reload takes effect on
the next one rather than when the pet's brain is next made. Looking is
GlanceBehavior, which picks whom to look at as SetEntityLookTarget does
and keeps the look for the habit's time; resting is RestBehavior, a
DoNothing whose length comes from the habit. Durations are an
InclusiveRange, since an IntProvider needs the game's registries to
load and a personality has to exist before them.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>