@@ -2,6 +2,11 @@ package com.dwinovo.chiikawa.utils;
 
 import com.dwinovo.chiikawa.entity.AbstractPet;
 import com.dwinovo.chiikawa.entity.brain.PetActivities;
+import com.dwinovo.chiikawa.entity.brain.personality.IdleHabits;
+import com.dwinovo.chiikawa.entity.brain.personality.PetPersonalities;
+import com.dwinovo.chiikawa.entity.brain.task.idle.GlanceBehavior;
+import com.dwinovo.chiikawa.entity.brain.task.idle.RestBehavior;
+import com.dwinovo.chiikawa.entity.brain.task.idle.WeightedChoice;
 import com.dwinovo.chiikawa.entity.brain.task.social.CooperateBehavior;
 import com.dwinovo.chiikawa.entity.brain.task.social.SocializeBehavior;
 import com.dwinovo.chiikawa.entity.brain.task.tameable.AnchorLeashBehavior;
@@ -18,17 +23,15 @@ import com.dwinovo.chiikawa.voice.PetSpeech;
 import com.dwinovo.chiikawa.voice.VoiceMoment;
 import com.google.common.collect.ImmutableList;
 import com.mojang.datafixers.util.Pair;
+import java.util.List;
 import java.util.Set;
 import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.entity.MobCategory;
 import net.minecraft.world.entity.ai.Brain;
 import net.minecraft.world.entity.ai.behavior.BehaviorControl;
 import net.minecraft.world.entity.ai.behavior.declarative.BehaviorBuilder;
-import net.minecraft.world.entity.ai.behavior.DoNothing;
 import net.minecraft.world.entity.ai.behavior.LookAtTargetSink;
 import net.minecraft.world.entity.ai.behavior.MoveToTargetSink;
-import net.minecraft.world.entity.ai.behavior.RunOne;
-import net.minecraft.world.entity.ai.behavior.SetEntityLookTarget;
 import net.minecraft.world.entity.schedule.Activity;
 
 /** Activities shared by every pet, whatever its job. */
@@ -54,16 +57,16 @@ public final class BrainUtils {
     /** {@code stay}: hold still but keep glancing around. */
     public static void addStayTasks(Brain<AbstractPet> brain) {
         Pair<Integer, BehaviorControl<? super AbstractPet>> sit = Pair.of(0, new SitBehavior<>());
-        Pair<Integer, BehaviorControl<? super AbstractPet>> lookAround = Pair.of(99, new RunOne<AbstractPet>(ImmutableList.of(
-            lookAtPlayer(), lookAtCreature(), doNothing()
+        Pair<Integer, BehaviorControl<? super AbstractPet>> lookAround = Pair.of(99, new WeightedChoice<>(List.of(
+            lookAtPlayer(), lookAtCreature(), rest()
         )));
         PetActivities.register(brain, InitActivity.STAY.get(), ImmutableList.of(sit, lookAround), Set.of());
     }
 
     /** {@code wander}: look around, stroll, and now and then say something. */
     public static void addIdleTasks(Brain<AbstractPet> brain) {
-        Pair<Integer, BehaviorControl<? super AbstractPet>> randomTask = Pair.of(99, new RunOne<AbstractPet>(ImmutableList.of(
-            lookAtPlayer(), lookAtCreature(), Pair.of(new RandomWalkTask(), 2), doNothing()
+        Pair<Integer, BehaviorControl<? super AbstractPet>> randomTask = Pair.of(99, new WeightedChoice<>(List.of(
+            lookAtPlayer(), lookAtCreature(), stroll(), rest()
         )));
         Pair<Integer, BehaviorControl<? super AbstractPet>> chatter = Pair.of(99, BehaviorBuilder.create(instance ->
             instance.point((level, pet, gameTime) -> PetSpeech.say(pet, VoiceMoment.IDLE).isPresent())));
@@ -105,15 +108,28 @@ public final class BrainUtils {
             ImmutableList.of(Pair.of(2, new CooperateBehavior())), Set.of());
     }
 
-    private static Pair<BehaviorControl<? super AbstractPet>, Integer> lookAtPlayer() {
-        return Pair.of(SetEntityLookTarget.create(EntityType.PLAYER, 5), 2);
+    // What a pet does with nothing to do, each as often and for as long as its personality's
+    // idle habits say.
+
+    private static WeightedChoice.Option<AbstractPet> lookAtPlayer() {
+        return new WeightedChoice.Option<>(new GlanceBehavior(entity -> entity.getType() == EntityType.PLAYER,
+            IdleHabits::lookAtPlayer), pet -> habits(pet).lookAtPlayer().weight());
     }
 
-    private static Pair<BehaviorControl<? super AbstractPet>, Integer> lookAtCreature() {
-        return Pair.of(SetEntityLookTarget.create(MobCategory.CREATURE, 5), 2);
+    private static WeightedChoice.Option<AbstractPet> lookAtCreature() {
+        return new WeightedChoice.Option<>(new GlanceBehavior(entity -> entity.getType().getCategory() == MobCategory.CREATURE,
+            IdleHabits::lookAtCreature), pet -> habits(pet).lookAtCreature().weight());
     }
 
-    private static Pair<BehaviorControl<? super AbstractPet>, Integer> doNothing() {
-        return Pair.of(new DoNothing(30, 60), 1);
+    private static WeightedChoice.Option<AbstractPet> stroll() {
+        return new WeightedChoice.Option<>(new RandomWalkTask(), pet -> habits(pet).stroll());
+    }
+
+    private static WeightedChoice.Option<AbstractPet> rest() {
+        return new WeightedChoice.Option<>(new RestBehavior(), pet -> habits(pet).rest().weight());
+    }
+
+    private static IdleHabits habits(AbstractPet pet) {
+        return PetPersonalities.of(pet.getType()).idle();
     }
 }
